k8s-ingress-configmaps-secrets-snehangshu/04-ingress-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args: ["-text=Response from APP ONE (path /one)", "-listen=:5678"]
          ports:
            - containerPort: 5678
          resources:
            requests: { cpu: 10m, memory: 16Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - port: 80
      targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args: ["-text=Response from APP TWO (path /two)", "-listen=:5678"]
          ports:
            - containerPort: 5678
          resources:
            requests: { cpu: 10m, memory: 16Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
    - port: 80
      targetPort: 5678
